--- a/style.css
+++ b/style.css
@@ -94,6 +94,53 @@ main h1{
   width: 400px;
   border-radius: 20px;
 }
+ .joined {
+    background-color: #ffffff;
+    border-radius: 20px;
+    margin: 0 auto;
+    margin-top: 50px;
+    padding: 40px 30px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+    text-align: center;
+    max-width: 900px;
+    width: 100%;
+}
+
+.title {
+    font-size: 28px;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 40px;
+}
+
+.stats {
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.stat {
+    flex: 1;
+    min-width: 200px; 
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.number {
+    font-size: 52px;
+    font-weight: 700;
+    color: #6a5acd; 
+    margin-bottom: 5px;
+}
+
+.description {
+    font-size: 18px;
+    color: #666;
+    font-weight: 400;
+}
 .rating-content{
   margin: 0 auto;
 }
